# Multi-drone-system-Ros2

./: MAV_manager_olive.py  README.md  commands.md  config.yaml  drone_menu_control.py  package.xml
OTHER_CODE/: ML_interference.py  Mavlink_test.ipynb  STATE_MACHINE.ipynb  app_stream.py  test_battery_read.py  test_battery_write.py
docs/: commands.md  install.md  ros2_ressources.md
src/: package.xml  setup.py
src/Control_ground_station/: MAV_manager_popeye.py
src/launch/: cgs_nodes.launch.py
src/olive/: MAV_manager.py  olive_nodes.launch.py  setup.cfg
src/olive/launch/: olive_nodes.launch.py
src/olive/olive/: analyse_CAM.py
src/popeye/: ARUCO__node.py  CAM__node.py  FSM__node.py  FSM__utils.py  MAV_manager__utils.py  package.xml  popeye_nodes.launch.py  setup.cfg  setup.py
src/popeye/launch/: popeye_nodes.launch.py
src/popeye/popeye/: ARUCO__node.py  CAM__node.py  FSM__node.py  FSM__utils.py  MAV_manager__node.py  MAV_manager__utils.py  PARAMS_utils.py
