<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>popeye</name>
  <version>1.0.0</version>
  <description>POPEYE drone control system with ArUco marker detection and precision landing</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  
  <author email="your.email@example.com">Your Name</author>
  
  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>
  
  <!-- Custom interfaces package -->
  <depend>interfaces</depend>
  
  <!-- Image processing -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  
  <!-- Python dependencies (installed via pip) -->
  <!-- These should be in requirements.txt:
       - pymavlink
       - opencv-python
       - numpy
       - python-statemachine
       - geopy
  -->
  
  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
